<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.CardGameSuiteApp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:text="Card Style"
            android:textAllCaps="true"
            android:textColor="?colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/deck1" />

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/deck2" />

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/dec3" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button2"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/regularCard"
            android:backgroundTint="?colorPrimaryVariant"/>

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button3"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/largeCardFont"
            android:backgroundTint="?colorPrimaryVariant"/>

        <Space
            android:layout_width="15dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button4"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/funkyCard"
            android:backgroundTint="?colorPrimaryVariant"/>
    </TableRow>
</LinearLayout>
